# context-effects-in-llm

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  BENCHMARK_INSTRUCTIONS.md  CONTRIBUTING.md  COSTS.md  Dockerfile  EPXERIMENT_DESIGN_NHH.md  EXPERIMENT_REPORT.md  EXPERIMENT_RESULTS.md  GRADE.md  PLAN.md  PRD.md  README.md  __init__.py  analysis.ipynb  analyze_results.py  base.py  benchmark_multiprocessing.py  budget.xlsx  config.py  dashboard.py  exp1_needle.py  exp2_size.py  exp3_rag.py  exp4_strategies.py  experiment_results.json  experiment_results_1.json  experiment_results_2.json  experiment_results_3.json  experiment_results_merged.json  extract_articles.py  lotr  main.py  merge_results.py  modelfile  needle_experiment.py  plugins.py  pyproject.toml  (+4 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: tests.yml
anomaly_detection/: EXPERIMENT_REPORT.md
chroma_db/: chroma.sqlite3
chroma_db_shared/: chroma.sqlite3
docs/: ARCHITECTURE.md  MATH_FOUNDATIONS.md  PERFORMANCE.md  PRD.md  PROMPTS.md  context-windows-lab-translated.md  test_report.html
docs/adr/: 001_shared_chromadb.md
docs/api/: conf.py  index.rst  modules.rst
documents/: articles_metadata.json
documents/articles_english/: 000_Benchmarking_new_xgboost_fast_histogram_xgboost_an.txt  (+149 more)
info_retrieval/: EXPERIMENT_REPORT.md  experiment_results.json  needle_experiment.py
prev_experiments/: experiment_results_1.json
results/: gemma3_4b-100K_results.json  gpt-oss_20b-100K_results.json  granite3.3_2b-100K_results.json  llama3.2_3b-100K_results.json  qwen3_4b-100K_results.json
tests/: test_analyze_results.py  test_config.py  test_experiments.py  test_integration.py  test_main.py  test_plugins.py  test_utils.py
(+20 files in other folders)
