[project]
name = "context-horizons"
version = "0.1.0"
description = "Benchmarking suite for LLM context window performance"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Context Horizons Team", email = "team@example.com"}
]
keywords = ["llm", "benchmark", "context-window", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ollama>=0.6.1",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "ipykernel",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pylint>=3.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/context-horizons"
Documentation = "https://github.com/yourusername/context-horizons#readme"
Repository = "https://github.com/yourusername/context-horizons"

[project.scripts]
context-horizons = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.black]
line-length = 120
target-version = ['py312']
